# EMGTrackpad

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.cursor/: settings.json
.cursor/rules/: react.mdc
apps/platform/: .gitignore  README.md  biome.json  build.ts  package.json
apps/platform/src/: index.html  index.ts  styles.css
apps/platform/src/app/: App.tsx  main.tsx  types.ts
src/emg/: analyze.py  track.py  train_click.py  train_controller.py
src/emg-trackpad/: controller.py  infer_click.py  track.py  train_click.py  train_controller.py  visualize.py
src/emg-trackpad/config/: train_click.yaml
src/emg-trackpad/config/click/: rms.yaml
src/emg-trackpad/config/controller/: freq_rms.yaml  transformer.yaml
src/emg-trackpad/config/inference/: click.yaml  controller.yaml
src/emg-trackpad/datasets/: click_dataset.py  controller_dataset.py  preprocessing.py
src/emg-trackpad/inference/: click.py  controller.py  streaming.py  trackpad.py  visualizer.py
src/emg-trackpad/model/: rms_mlp.py
src/emg-trackpad/util/: mlp.py
src/emg/config/click/: freq_rms.yaml  rms.yaml  transformer.yaml
src/emg/config/controller/: mpf.yaml  (+7 more)
src/emg/datasets/: click_dataset.py  controller_dataset.py  preprocessing.py  split.py  transforms.py
src/emg/inference/: click.py  controller.py  output_interface.py  test_output_interface.py  test_trackpad.py  test_visualizer.py  trackpad.py  visualizer.py
src/emg/model/: channel_attention.py  freq_rms.py  mpf.py  rms.py  rms_lstm.py  rms_mlp.py  specaug.py  transformer.py
src/emg/util/: device.py  lr_scheduler.py  mlp.py
(+11 files in other folders)
