[project]
name = "emgtrackpad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "mindrove>=5.2.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyobjc-framework-quartz>=12.1",
    "scipy>=1.16.3",
]
